--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "date-fns": "^2.23.0",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.1",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^7.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
-    "styled-normalize": "^8.0.7",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
